<resources>
    <string name="app_name">ChessView</string>

    <string name="title_register">Создать аккаунт на ChessView</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="city">Город</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="rules">Я согласен с пользовательским соглашением</string>
    <string name="btn_login"><u>Есть аккаунт? Войти</u></string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login_title">ChessView</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="tv_btn_register"><u>Зарегистрироваться</u></string>
    <string name="login">Войти</string>
    <string name="homepage">Главная</string>
    <string name="streams">Стримы</string>
    <string name="favorite">Избранное</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage_title">Добро пожаловать!</string>
    <string name="user_name">User Name</string>
    <string name="user_place">Санкт-Петербург</string>
    <string name="soon">Раздел в разработке</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="read_more"><u>Читать далее</u></string>
    <string name="example_date">Вчера, 22:19</string>
    <string name="short_description">Short description of the video</string>
    <string name="title_of_the_video">Title of the video</string>
    <string name="remove">Remove</string>
    <string name="views">127k views</string>
    <string name="date">3 month ago</string>
    <string name="channel_name">Chess channel</string>
    <string name="subscribe">+ Подписаться</string>
    <string name="subscribers">17k subscribers</string>
    <string name="notification_settings">Настройки уведомлений</string>
    <string name="profile_settings">Данные профиля</string>
    <string name="privacy">Приватность</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="no_notifications">Не беспокоить</string>
    <string name="empty">\n\n</string>

    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="confidentiality">Конфендециальность</string>
    <string name="subscriptions">Подписки</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="no_data">Нет данных</string>
    <string name="user_avatar">User avatar</string>
    <string name="save">Сохранить данные</string>
    <string name="name_surname">Name Surname</string>
    <string name="logout">Выйти</string>
    <string name="no_network">Нет соединения с интернетом</string>
    <string name="user_email">example@gmail.com</string>
    <string name="_1">Категория</string>
    <string name="_123">123</string>
    <string name="write_comment">Напишите комментарий...</string>
    <string name="lorem_short">Lorem ipsum dolor</string>


</resources>