<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_light"
            android:textColor="?android:textColorPrimary"
            android:text="@string/notification_settings"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_light"
            android:textColor="?android:textColorPrimary"
            android:text="@string/profile_settings"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_light"
            android:textColor="?android:textColorPrimary"
            android:text="@string/privacy"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_dark_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_light"
            android:textColor="?android:textColorPrimary"
            android:text="@string/dark_theme"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MySwitch" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_no_notifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_light"
            android:textColor="?android:textColorPrimary"
            android:text="@string/no_notifications"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MySwitch" />

    </LinearLayout>







</LinearLayout>